# wishlist-bot

./: .gitignore  Dockerfile  README.md  deploy-twa.sh  docker-compose.yaml  pom.xml
db/migrations/: 000001_init_schema.down.sql  000001_init_schema.up.sql  000002_alter_users_allow_username_null.down.sql  000002_alter_users_allow_username_null.up.sql  000003_alter_wishlist_items_add_is_public_column.down.sql  000003_alter_wishlist_items_add_is_public_column.up.sql  000004_alter_wishlist_items_extend_columns.down.sql  000004_alter_wishlist_items_extend_columns.up.sql  000005_create_wishist_items_meta_table.down.sql  000005_create_wishist_items_meta_table.up.sql  000006_alter_users_add_image_url.down.sql  000006_alter_users_add_image_url.up.sql  000007_alter_wishlist_items_add_status_price.down.sql  000007_alter_wishlist_items_add_status_price.up.sql  000008_add_wl_item_reservations_table.down.sql  000008_add_wl_item_reservations_table.up.sql  000009_add_thumbnail_url_columns.down.sql  000009_add_thumbnail_url_columns.up.sql
db/scripts/: create.sh  downgrade.sh  force.sh  upgrade.sh
docs/: architecture.md  db-migrations.md  requirements.md
ops/: README.md
ops/scripts/: create-secrets.sh  deploy-with-helm.sh  docker-build-and-push.sh
ops/wishlist-bot/: Chart.yaml  values.yaml
ops/wishlist-bot/templates/: deployment.yaml  ingress.yaml
src/main/resources/: application.yaml
tools/parser/: app.py  pyproject.toml
twa/: .env.production  README.md  index.html  package.json  pnpm-lock.yaml
twa/css/: styles.css
twa/src/: App.vue  main.js
twa/src/lib/: api.js  (+3 more)
(+99 files in other folders)
