[tool.poetry]
name = "parser"
version = "0.0.1"
description = ""
authors = ["Sergey Royz <zjor.se@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
selenium = "^4.11.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
